--- a/tests/dummy/app/components/hello.hbs
+++ b/tests/dummy/app/components/hello.hbs
@@ -1,3 +1,3 @@
-<p local-class="look-at-me">
-  I’m scoped look at me! I should be pink!
+<p local-class="look-at-me" data-test--paragraph>
+  I’m scoped look at me! I should be gray!
 </p>
