--- a/tests/dummy/app/components/hello.module.less
+++ b/tests/dummy/app/components/hello.module.less
@@ -1,4 +1,4 @@
 .look-at-me {
 	/* stylelint-disable-next-line function-no-unknown */
-	color: mix(crimson, white, 50%);
+	color: mix(black, white, 50%);
 }
